--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,12 @@
     "background": {
       "scripts": ["background.js"]
     },
+    "host_permissions": [
+      "<all_urls>"
+    ],
     "content_scripts": [
       {
-        "matches": ["*://*.youtube.com/shorts*"],
+        "matches": ["<all_urls>"],
         "js": ["content.js"]
       }
     ],
